--- a/new/mqeditor.css
+++ b/new/mqeditor.css
@@ -78,6 +78,12 @@
 .mqed-btn:active, .mqed-btn.mactive, .mqed-btn.active {
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
+.mqed-btn.mqed-navkey {
+  background-color: #f4f4f4;
+}
+.mqed-btn.mqed-digitkey {
+  background-color: #f4f4f4;
+}
 .mqed-tab {
   border: 0;
   background-color: transparent;
@@ -85,20 +91,36 @@
   border-radius: 0;
   font-size: 90%;
 }
-.mqed-tab::after {
+.mqed-tabpanel {
+  padding-top:2px;
+}
+/*.mqed-tab::after {
   position: absolute;
   right: 2px;
   content: "\25b8"
 }
-.mqed-tab.active {
-  border-bottom: 2px solid #009;
-  color: #006;
-  background-color:
-  box-shadow: none;
-}
 .mqed-tab.active::after {
   content: "\25c2"
 }
+*/
+.mqed-tabrow {
+  background-color: #fff;
+}
+.mqed-tabrow > .mqed-btn-cont {
+  flex-grow: unset;
+  height: auto;
+}
+.mqed-tabrow > .mqed-btn-cont > .mqed-btn {
+  position: static;
+  padding: 4px 12px;
+}
+.mqed-tab.mqed-activetab {
+  border-bottom: 2px solid #009;
+  color: #006;
+  background-color: #fafafa;
+  box-shadow: none;
+}
+
 .mqed-btn .mq-root-block {
   padding: 0;
 }
